# Network-Monitor-esp-rs-no-std

./: Cargo.toml  README.md  lefthook.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: README.md  build-firmware.yml  check.yml  dev-release.yml  release.yml
src/: display.rs  main.rs  udp_client.rs  wifi.rs
st7735/src/: lib.rs
